replace Stream.toList() with Collectors.toList() for better compatibility